--- a/src/main/webapp/resources/css/materialize.css
+++ b/src/main/webapp/resources/css/materialize.css
@@ -3328,6 +3328,9 @@ nav ul a span.badge {
   padding-right: 40px;
   margin-bottom: 10px;
 }
+.margin1 {
+  padding-top: 20px;
+}
 
 .right {
   float: right !important;
